--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   /* Existing Colors */
   --color-base1: #17479e;
   --color-base2: #ee3824;
+  --color-base3: #114E87;
 
   /* Custom Container Sizes (Override Defaults) */
   --container-sm: 40rem;
