--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,62 @@
 @import "tailwindcss";
 
-:root {
-  --header-y: 80px;
-  --marquee-y: 50px;
+@layer base {
+  :root {
+    --font-amino: 'Amino', sans-serif;
+    --header-y: 80px;
+    --marquee-y: 40px;
+    --container-x: 100%;
+  }
+
+  @media (min-width: 640px) {
+
+    /* sm */
+    :root {
+      /* Custom Container Sizes (Override Defaults) */
+      --container-x: 40rem;
+    }
+  }
+
+  @media (min-width: 768px) {
+
+    /* md */
+    :root {
+      /* 480px, vs default 640px */
+      --container-x: 48rem;
+    }
+  }
+
+  @media (min-width: 1024px) {
+
+    /* lg */
+    :root {
+      /* 576px, vs default 768px */
+      --container-x: 64rem;
+    }
+  }
+
+  @media (min-width: 1280px) {
+
+    /* xl */
+    :root {
+      /* 768px, vs default 1024px */
+      --container-x: 80rem;
+    }
+  }
+
+  @media (min-width: 1536px) {
+
+    :root {
+      /* 960px, vs default 1280px */
+      --container-x: 96rem;
+      --marquee-y: 50px;
+      --header-y: 100px;
+    }
+  }
+
+  body {
+    font-family: var(--font-amino);
+  }
 }
 
 @theme {
@@ -12,16 +66,7 @@
   --color-base3: #b7d0ff;
   --color-base4: #114e87;
 
-  /* Custom Container Sizes (Override Defaults) */
-  --container-sm: 40rem;
-  /* 480px, vs default 640px */
-  --container-md: 48rem;
-  /* 576px, vs default 768px */
-  --container-lg: 64rem;
-  /* 768px, vs default 1024px */
-  --container-xl: 80rem;
-  /* 960px, vs default 1280px */
-  --container-2xl: 96rem;
+
   /* 1152px, vs default 1536px */
   --container-padding: 1.5rem;
   /* Optional: Custom padding */
@@ -50,104 +95,12 @@
 /* Apply custom container sizes at standard breakpoints */
 @layer utilities {
   .container {
-    max-width: 100%;
+    max-width: var(--container-x);
     /* Default full-width below sm */
     margin-left: auto;
     margin-right: auto;
     padding-left: var(--container-padding, 1rem);
     padding-right: var(--container-padding, 1rem);
-  }
-
-  @media (min-width: 640px) {
-
-    /* sm */
-    .container {
-      max-width: var(--container-sm);
-    }
-  }
-
-  @media (min-width: 768px) {
-
-    /* md */
-    .container {
-      max-width: var(--container-md);
-    }
-  }
-
-  @media (min-width: 1024px) {
-
-    /* lg */
-    .container {
-      max-width: var(--container-lg);
-    }
-  }
-
-  @media (min-width: 1280px) {
-
-    /* xl */
-    .container {
-      max-width: var(--container-xl);
-    }
-  }
-
-  @media (min-width: 1536px) {
-
-    /* 2xl */
-    .container {
-      max-width: var(--container-2xl);
-    }
-  }
-
-  .text-title1 {
-    font-size: 18px;
-    line-height: 1.3;
-    font-weight: 400;
-    color: #000;
-  }
-
-  @media (min-width: 640px) {
-
-    /* sm */
-    .text-title1 {
-      font-size: 22px;
-    }
-  }
-
-  @media (min-width: 768px) {
-
-    /* md */
-    .text-title1 {
-      font-size: 28px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-
-    /* lg */
-    .text-title1 {
-      font-size: 36px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-
-    /* xl */
-    .text-title1 {
-      font-size: 46px;
-    }
-  }
-
-  @media (min-width: 1536px) {
-
-    /* 2xl */
-    .text-title1 {
-      font-size: 54px;
-    }
-  }
-
-  .text-title1>span{
-    font-weight: 700;
-    color: #ee3824;
   }
 
 }
@@ -162,7 +115,9 @@
     width: 100%;
     height: 35px;
     background: none;
+    cursor: pointer;
     border-radius: 50px;
+    -webkit-border-radius: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -198,5 +153,115 @@
 
   .btn-base2:hover {
     background-color: #17479e;
+  }
+
+
+  /* FONTS */
+  .text-title1 {
+    font-size: 18px;
+    line-height: 1.3;
+    font-weight: 400;
+    color: #000;
+  }
+
+  .text-header-sm {
+    font-size: 12px;
+    line-height: 1;
+    font-weight: 500;
+    color: #000;
+  }
+
+  .text-sm-1 {
+    font-size: 12px;
+    line-height: 1.4;
+    font-weight: 400;
+    color: #000;
+  }
+
+  @media (min-width: 640px) {
+
+    /* sm */
+    .text-title1 {
+      font-size: 22px;
+    }
+  }
+
+  @media (min-width: 768px) {
+
+    /* md */
+    .text-title1 {
+      font-size: 28px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+
+    /* lg */
+    .text-title1 {
+      font-size: 36px;
+    }
+
+    .text-header-sm {
+      font-size: 14px;
+    }
+
+    .text-sm-1 {
+      font-size: 14px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+
+    /* xl */
+    .text-title1 {
+      font-size: 46px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+
+    /* 2xl */
+    .text-title1 {
+      font-size: 54px;
+    }
+
+    .text-header-sm {
+      font-size: 16px;
+    }
+
+    .text-sm-1 {
+      font-size: 16px;
+    }
+  }
+
+  .text-title1>span {
+    font-weight: 700;
+    color: #ee3824;
+  }
+
+
+
+  .heroSlide {
+    --swiper-pagination-bottom: 40px;
+    --swiper-pagination-color: #fff;
+    --swiper-pagination-bullet-width: 8px;
+    --swiper-pagination-bullet-height: 8px;
+    --swiper-pagination-bullet-inactive-color: #fff;
+    --swiper-pagination-bullet-inactive-opacity: 1;
+    --swiper-pagination-bullet-horizontal-gap: 10px;
+  }
+
+  .heroSlide .swiper-pagination {
+    text-align: start !important;
+    max-width: var(--container-x);
+    padding-left: var(--container-padding, 1rem);
+    padding-right: var(--container-padding, 1rem);
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+
+  .heroSlide .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    outline: 3px solid #ee3824;
   }
 }
