--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@
     :root {
       /* 576px, vs default 768px */
       --container-x: 64rem;
+      --header-y: 60px;
     }
   }
 
@@ -41,6 +42,7 @@
     :root {
       /* 768px, vs default 1024px */
       --container-x: 80rem;
+      --header-y: 80px;
     }
   }
 
@@ -113,7 +115,7 @@
     text-transform: uppercase;
     color: #fff;
     width: 100%;
-    height: 35px;
+    height: 30px;
     background: none;
     cursor: pointer;
     border-radius: 50px;
@@ -198,11 +200,11 @@
 
     /* lg */
     .text-title1 {
-      font-size: 36px;
+      font-size: 32px;
     }
 
     .text-header-sm {
-      font-size: 14px;
+      font-size: 12px;
     }
 
     .text-sm-1 {
@@ -214,7 +216,10 @@
 
     /* xl */
     .text-title1 {
-      font-size: 46px;
+      font-size: 44px;
+    }
+    .text-header-sm {
+      font-size: 14px;
     }
   }
 
