--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
       /* 768px, vs default 1024px */
       --container-x: 80rem;
       --header-y: 80px;
+      --marquee-y: 40px;
     }
   }
 
@@ -52,6 +53,15 @@
     :root {
       /* 960px, vs default 1280px */
       --container-x: 96rem;
+    }
+  }
+
+  @media (min-width: 1920px) {
+
+    /* 2xl */
+    :root {
+      /* 960px, vs default 1280px */
+      --container-x: 120rem;
       --marquee-y: 50px;
       --header-y: 100px;
     }
@@ -70,8 +80,10 @@
   --color-base4: #114e87;
 
   /* 1152px, vs default 1536px */
-  --container-padding: 1.5rem;
+  --container-padding: 7rem;
   /* Optional: Custom padding */
+
+  --breakpoint-3xl: 120rem;
 
   /* Existing Font Sizes */
   --font-size-xxs: 0.625rem;
@@ -109,7 +121,7 @@
 
 @layer components {
   .btn {
-    font-size: 0.6rem;
+    font-size: 12px;
     line-height: 1;
     font-weight: 500;
     text-transform: uppercase;
@@ -130,15 +142,22 @@
 
   @media (min-width: 1280px) {
     .btn {
-      font-size: 0.8rem;
+      font-size: 12px;
       height: 40px;
     }
   }
 
   @media (min-width: 1536px) {
     .btn {
-      font-size: 1rem;
-      height: 45px;
+      font-size: 14px;
+      height: 44px;
+    }
+  }
+
+  @media (min-width: 1920px) {
+    .btn {
+      font-size: 16px;
+      height: 48px;
     }
   }
 
@@ -237,17 +256,33 @@
     }
   }
 
-  @media (min-width: 1280px) {
-
-    /* xl */
-    .text-title1 {
-      font-size: 35px;
-    }
-  }
-
   @media (min-width: 1536px) {
 
     /* 2xl */
+    .text-title1 {
+      font-size: 42px;
+    }
+
+    .text-sm-1, p {
+      font-size: 14px;
+    }
+
+    .text-header-sm {
+      font-size: 14px;
+    }
+
+    .text-footer-1 {
+      font-size: 20px;
+    }
+
+    .text-footer-2 {
+      font-size: 14px;
+    }
+  }
+
+  @media (min-width: 1920px) {
+
+    /* 3xl */
     .text-title1 {
       font-size: 48px;
     }
@@ -306,9 +341,8 @@
 
   .lifeSlide .swiper-pagination {
     text-align: start !important;
-    max-width: var(--container-x);
-    padding-left: var(--container-padding, 1rem);
-    padding-right: var(--container-padding, 1rem);
+    padding-left: 15px;
+    padding-right: 15px;
     left: 0;
     right: 0;
     margin: auto;
