--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -385,15 +385,6 @@
 
 }
 
-.custom-container {
-  margin: auto;
-  padding: 0 15px;
-  width: 100%;
-  max-width: 100%;
-
-
-}
-
 @media (min-width: 640px) {
 
   /* sm */
@@ -443,5 +434,24 @@
    
   }
 }
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 1.5px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  border-radius: 100px;
+  background: rgba(23, 71, 158, 0.60);
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background: red;
+  width: 6px !important;
+  min-height: 50px;
+  border-radius: 100px;
+}
+
+
+
 
  
