--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,13 @@
     padding-left: var(--container-padding, 1rem);
     padding-right: var(--container-padding, 1rem);
   }
-
+  .sp-container{
+    max-width: calc(100% - ((100% - var(--container-x))/ 2));
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: var(--container-padding, 1rem);
+    padding-right: var(--container-padding, 1rem);
+  }
 }
 
 @layer components {
@@ -300,7 +306,7 @@
 
     .text-sm-1,
     p {
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .text-header-sm {
