--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -202,6 +202,13 @@
     color: #000;
   }
 
+  .text-title2 {
+    font-size: 24px;
+    line-height: 1.3;
+    font-weight: 400;
+    color: #000;
+  }
+
   .text-sm-1,
   p {
     font-size: 12px;
@@ -237,6 +244,10 @@
     .text-title1 {
       font-size: 22px;
     }
+
+    .text-title2 {
+      font-size: 28px;
+    }
   }
 
   @media (min-width: 768px) {
@@ -245,6 +256,10 @@
     .text-title1 {
       font-size: 26px;
     }
+
+    .text-title2 {
+      font-size: 36px;
+    }
   }
 
   @media (min-width: 1024px) {
@@ -252,6 +267,10 @@
     /* lg */
     .text-title1 {
       font-size: 36px;
+    }
+
+    .text-title2 {
+      font-size: 46px;
     }
 
     .text-sm-1,
@@ -279,6 +298,10 @@
       font-size: 38px;
     }
 
+    .text-title2 {
+      font-size: 58px;
+    }
+
     .text-sm-1,
     p {
       font-size: 14px;
@@ -302,6 +325,10 @@
     /* 3xl */
     .text-title1 {
       font-size: 54px;
+    }
+
+    .text-title2 {
+      font-size: 68px;
     }
 
     .text-sm-1,
