--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@
   }
 
   @media (min-width: 1536px) {
-    
+
     /* 2xl */
     :root {
       /* 960px, vs default 1280px */
@@ -347,8 +347,8 @@
     outline: 3px solid #ee3824;
   }
 
-
-  .lifeSlide {
+  .lifeSlide,
+  .awardSlide {
     --swiper-pagination-bottom: 20px;
     --swiper-pagination-color: #17479E;
     --swiper-pagination-bullet-width: 8px;
@@ -367,22 +367,50 @@
     margin: auto;
   }
 
-  .lifeSlide .swiper-slide {
+  .lifeSlide,
+  .awardSlide .swiper-slide {
     height: auto !important;
-
   }
-  
-  .lifeSlide .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+
+  .lifeSlide,
+  .awardSlide .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
     outline: 1px solid #17479E;
   }
+
+  .awardSlide .swiper-pagination {
+    position: unset !important;
+    text-align: start !important;
+    padding-right: 15px;
+    margin-left: -8px;
+  }
 }
+
+.awardSlide {
+  --swiper-pagination-color: #EB0208;
+}
+
+.awardSlide .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+}
+
+@media (max-width: 1200px) {
+  .awardSlide .swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+  }
+}
+
+.awardSlide .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  outline: 1px solid var(--swiper-pagination-color);
+}
+
 .LoanSlider .swiper-wrapper {
   padding: 20px 0 !important;
-
 }
+
 .LoanSlider .swiper-slide {
   height: auto !important;
-
 }
 
 .custom-container {
@@ -390,8 +418,6 @@
   padding: 0 15px;
   width: 100%;
   max-width: 100%;
-
-
 }
 
 @media (min-width: 640px) {
@@ -440,8 +466,7 @@
   /* 3xl */
   .custom-container {
     max-width: 1640px;
-   
   }
 }
 
- 
+
