--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,6 +122,13 @@
     padding-right: var(--container-padding, 1rem);
   }
 
+  .sp-container {
+    max-width: calc(100% - ((100% - var(--container-x))/ 2));
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: var(--container-padding, 1rem);
+    padding-right: var(--container-padding, 1rem);
+  }
 }
 
 @layer components {
@@ -193,6 +200,13 @@
     color: #000;
   }
 
+  .text-title2 {
+    font-size: 24px;
+    line-height: 1.3;
+    font-weight: 400;
+    color: #000;
+  }
+
   .text-sm-1,
   p {
     font-size: 12px;
@@ -222,11 +236,27 @@
     color: rgba(0, 0, 0, 0.8);
   }
 
+  .text-banner-1 {
+    font-size: 26px;
+    line-height: 1;
+    font-weight: 400;
+    color: #000;
+    text-transform: capitalize;
+  }
+
   @media (min-width: 640px) {
 
     /* sm */
     .text-title1 {
       font-size: 22px;
+    }
+
+    .text-title2 {
+      font-size: 28px;
+    }
+
+    .text-banner-1 {
+      font-size: 30px;
     }
   }
 
@@ -236,13 +266,25 @@
     .text-title1 {
       font-size: 26px;
     }
+
+    .text-title2 {
+      font-size: 36px;
+    }
+
+    .text-banner-1 {
+      font-size: 34px;
+    }
   }
 
   @media (min-width: 1024px) {
 
     /* lg */
     .text-title1 {
-      font-size: 34px;
+      font-size: 36px;
+    }
+
+    .text-title2 {
+      font-size: 46px;
     }
 
     .text-sm-1,
@@ -261,6 +303,10 @@
     .text-footer-2 {
       font-size: 12px;
     }
+
+    .text-banner-1 {
+      font-size: 40px;
+    }
   }
 
   @media (min-width: 1536px) {
@@ -268,6 +314,10 @@
     /* 2xl */
     .text-title1 {
       font-size: 38px;
+    }
+
+    .text-title2 {
+      font-size: 58px;
     }
 
     .text-sm-1,
@@ -286,6 +336,10 @@
     .text-footer-2 {
       font-size: 14px;
     }
+
+    .text-banner-1 {
+      font-size: 48px;
+    }
   }
 
   @media (min-width: 1920px) {
@@ -295,9 +349,13 @@
       font-size: 56px;
     }
 
+    .text-title2 {
+      font-size: 68px;
+    }
+
     .text-sm-1,
     p {
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .text-header-sm {
@@ -310,6 +368,10 @@
 
     .text-footer-2 {
       font-size: 16px;
+    }
+
+    .text-banner-1 {
+      font-size: 68px;
     }
   }
 
@@ -367,14 +429,17 @@
     margin: auto;
   }
 
-  .lifeSlide,
+  .lifeSlide .swiper-slide,
   .awardSlide .swiper-slide {
     height: auto !important;
   }
 
-  .lifeSlide,
-  .awardSlide .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  .lifeSlide .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
     outline: 1px solid #17479E;
+  }
+
+  .awardSlide {
+    --swiper-pagination-color: #EB0208;
   }
 
   .awardSlide .swiper-pagination {
@@ -383,170 +448,134 @@
     padding-right: 15px;
     margin-left: -8px;
   }
-}
 
-.awardSlide {
-  --swiper-pagination-color: #EB0208;
-}
-
-.awardSlide .swiper-pagination-bullet {
-  width: 10px;
-  height: 10px;
-}
-
-@media (max-width: 1200px) {
   .awardSlide .swiper-pagination-bullet {
-    width: 8px;
-    height: 8px;
+    width: 10px;
+    height: 10px;
   }
-}
 
-.awardSlide .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  outline: 1px solid var(--swiper-pagination-color);
-}
+  .awardSlide .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    outline: 1px solid var(--swiper-pagination-color);
+  }
 
-.LoanSlider .swiper-wrapper {
-  padding: 20px 0 !important;
-}
+  @media (max-width: 1200px) {
+    .awardSlide .swiper-pagination-bullet {
+      width: 8px;
+      height: 8px;
+    }
+  }
 
-.LoanSlider .swiper-slide {
-  height: auto !important;
-}
+  .LoanSlider .swiper-wrapper {
+    padding: 20px 0 !important;
+  }
 
-.custom-container {
-  margin: auto;
-  padding: 0 15px;
-  width: 100%;
-  max-width: 100%;
-}
+  .LoanSlider .swiper-slide {
+    height: auto !important;
+  }
 
-@media (min-width: 640px) {
+  .employeeTestimonialsSlide .swiper-pagination {
+    font-size: 14px;
+    line-height: 1;
+    font-weight: 400;
+    color: #000;
+    text-align: right !important;
+  }
 
-  /* sm */
+  .employeeTestimonialsSlide .swiper-pagination .swiper-pagination-current {
+    font-size: 130%;
+    line-height: 1;
+    font-weight: bold;
+    color: var(--color-base2);
+  }
+
+  @media (min-width: 1024px) {
+    .employeeTestimonialsSlide .swiper-pagination {
+      font-size: 16px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .employeeTestimonialsSlide .swiper-pagination {
+      font-size: 18px;
+    }
+  }
+
+  @media (min-width: 1920px) {
+    .employeeTestimonialsSlide .swiper-pagination {
+      font-size: 22px;
+    }
+  }
+
   .custom-container {
-    max-width: 600px;
-    padding: 0;
-  }
-}
-
-@media (min-width: 768px) {
-
-  /* md */
-  .custom-container {
-    max-width: 750px;
-  }
-}
-
-@media (min-width: 1024px) {
-
-  /* lg */
-  .custom-container {
-    max-width: 980px;
-  }
-}
-
-@media (min-width: 1280px) {
-
-  /* xl */
-  .custom-container {
-    max-width: 1180;
-  }
-}
-
-@media (min-width: 1536px) {
-
-  /* 2xl */
-  .custom-container {
-    max-width: 1430px;
-  }
-}
-
-@media (min-width: 1920px) {
-
-  /* 3xl */
-  .custom-container {
-    max-width: 1640px;
-  }
-}
-
-
-
-/* globals.css */
-
-/* Container styling */
-.swiper-container {
-  width: 100%;
-}
-
-.swiper {
-  width: 100%;
-  height: auto;
-}
-
-/* Base styles for slides */
-.swiper-slide-custom {
-  width: 300px !important;
-  height: 200px;
-  background: #f0f0f0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease;
-}
-
-/* Responsive adjustments */
-@media screen and (max-width: 2000px) {
-  .swiper-slide-custom {
-    /* width: 250px !important; */
-    height: 180px;
+    margin: auto;
+    padding: 0 15px;
+    width: 100%;
+    max-width: 100%;
   }
 
-  .swiper {
-    --swiper-coverflow-stretch: 1200px !important;
-  }
-}
+  @media (min-width: 640px) {
 
-@media screen and (max-width: 1024px) {
-  .swiper-slide-custom {
-    width: 200px !important;
-    height: 150px;
+    /* sm */
+    .custom-container {
+      max-width: 600px;
+      padding: 0;
+    }
   }
 
-  .swiper {
-    --swiper-coverflow-stretch: 1200px;
-  }
-}
+  @media (min-width: 768px) {
 
-@media screen and (max-width: 768px) {
-  .swiper-slide-custom {
-    width: 180px !important;
-    height: 120px;
+    /* md */
+    .custom-container {
+      max-width: 750px;
+    }
   }
 
-  .swiper {
-    --swiper-coverflow-stretch: 1200px;
+  @media (min-width: 1024px) {
+
+    /* lg */
+    .custom-container {
+      max-width: 980px;
+    }
   }
 
-  .swiper-container {
-    padding: 15px 0;
-  }
-}
+  @media (min-width: 1280px) {
 
-@media screen and (max-width: 1200px) {
-  .swiper-slide-custom {
-    width: 150px !important;
-    height: 100px;
+    /* xl */
+    .custom-container {
+      max-width: 1180px;
+    }
   }
 
-  .swiper {
-    --swiper-coverflow-stretch: 1200px;
+  @media (min-width: 1536px) {
+
+    /* 2xl */
+    .custom-container {
+      max-width: 1430px;
+    }
   }
 
-  .swiper-container {
-    padding: 10px 0;
+  @media (min-width: 1920px) {
+
+    /* 3xl */
+    .custom-container {
+      max-width: 1640px;
+    }
   }
 
-  .swiper {
-    border-radius: 20px !important;
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 1.5px;
   }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    border-radius: 100px;
+    background: rgba(23, 71, 158, 0.60);
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background: red;
+    width: 6px !important;
+    min-height: 50px;
+    border-radius: 100px;
+  }
+
 }
