--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -487,7 +487,7 @@
     width: 100%;
     max-width: 100%;
   }
-  .gallTab button {
+  /* .gallTab button {
       background: none; 
       color: #17479E;
     }
@@ -495,7 +495,7 @@
     .gallTab button[aria-selected="true"] {
       background: linear-gradient(156deg, #17479E 6.47%, #C63B3B 91.2%);
       color: #fff;
-    }
+    } */
      
   
 
