--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -471,7 +471,8 @@
   border-radius: 100px;
 }
 
-/* history slider */
+ 
+/* years inception */
 
 .dot-timeline {
   width: 4px;
@@ -542,195 +543,5 @@
   .arrow-down {
     margin-top: 4px;
     transform: rotate(-45deg);
-  }
-}
-
-
-.itemsList {
-  height: 100%;
-  position: relative;
-}
-
-.itemsList .item {
-  position: relative;
-  width: 100%;
-}
-
-.itemsList .item:nth-child(1) {
-  position: relative;
-  max-width: 340px;
-  max-height: 200px;
-}
-
-.itemsList .item:nth-child(2) {
-  position: relative;
-  max-width: 225px;
-  max-height: 300px;
-}
-
-.itemsList .item:nth-child(3) {
-  position: relative;
-  max-width: 190px;
-  max-height: 150px;
-}
-
-.itemsList .item:nth-child(4) {
-  position: relative;
-  max-width: 190px;
-  max-height: 265px;
-}
-
-.itemsList .item:nth-child(5) {
-  position: relative;
-  left: -65px;
-  max-width: 260px;
-  max-height: 230px;
-}
-
-.itemsList .item:nth-child(6) {
-  position: relative;
-  max-width: 220px;
-  max-height: 145px;
-  left: -65px;
-}
-
-.itemsList .item:nth-child(7) {
-  position: relative;
-  left: -100px;
-  max-width: 240px;
-  max-height: 175px;
-  left: -100px;
-}
-
-.itemsList .item:nth-child(8) {
-  position: relative;
-  max-width: 100%;
-  max-height: 310px;
-  left: -100px;
-}
-
-@media only screen and (max-width: 1919px) {
-
-  .itemsList .item:nth-child(2) {
-    max-width: 150px;
-    max-height: 300px;
-  }
-
-  .itemsList .item:nth-child(3) {
-    max-width: 145px;
-    max-height: 150px;
-  }
-
-  .itemsList .item:nth-child(4) {
-    max-width: 145px;
-    max-height: 260px;
-  }
-
-  .itemsList .item:nth-child(5) {
-    max-width: 205px;
-    max-height: 230px;
-    left: -65px;
-  }
-
-  .itemsList .item:nth-child(6) {
-    max-width: 165px;
-    max-height: 145px;
-    left: -65px;
-  }
-
-  .itemsList .item:nth-child(7) {
-    max-width: 190px;
-    max-height: 175px;
-    left: -80px;
-  }
-
-  .itemsList .item:nth-child(8) {
-    max-width: 190px;
-    max-height: 250px;
-    left: -80px;
-  }
-}
-
-@media only screen and (max-width: 1535px) {
-
-  .itemsList .item:nth-child(2) {
-    max-width: 130px;
-    max-height: 330px;
-  }
-
-  .itemsList .item:nth-child(3) {
-    max-width: 115px;
-    max-height: 150px;
-  }
-
-  .itemsList .item:nth-child(4) {
-    max-width: 130px;
-    max-height: 165px;
-  }
-
-  .itemsList .item:nth-child(5) {
-    max-width: 245px;
-    max-height: 240px;
-    left: -40px;
-  }
-
-  .itemsList .item:nth-child(6) {
-    max-width: 120px;
-    max-height: 135px;
-    left: -40px;
-  }
-
-  .itemsList .item:nth-child(7) {
-    max-width: 140px;
-    max-height: 175px;
-    left: -40px;
-  }
-
-  .itemsList .item:nth-child(8) {
-    max-width: 190px;
-    max-height: 250px;
-    left: -40px;
-  }
-}
-
-@media only screen and (max-width: 1279px) {
-
-  .itemsList .item:nth-child(2) {
-    max-width: 120px;
-    max-height: 320px;
-  }
-
-  .itemsList .item:nth-child(3) {
-    max-width: 115px;
-    max-height: 150px;
-  }
-
-  .itemsList .item:nth-child(4) {
-    max-width: 130px;
-    max-height: 165px;
-  }
-
-  .itemsList .item:nth-child(5) {
-    max-width: 245px;
-    max-height: 240px;
-    left: -25px;
-  }
-
-  .itemsList .item:nth-child(6) {
-    max-width: 110px;
-    max-height: 135px;
-    left: -25px;
-  }
-
-  .itemsList .item:nth-child(7) {
-    max-width: 140px;
-    max-height: 175px;
-    left: -15px;
-  }
-
-  .itemsList .item:nth-child(8) {
-    max-width: 190px;
-    max-height: 250px;
-    left: -15px;
   }
 }
