--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -252,7 +252,7 @@
 
     /* lg */
     .text-title1 {
-      font-size: 36px;
+      font-size: 34px;
     }
 
     .text-sm-1,
@@ -277,7 +277,7 @@
 
     /* 2xl */
     .text-title1 {
-      font-size: 38px;
+      font-size: 36px;
     }
 
     .text-sm-1,
@@ -471,7 +471,7 @@
   border-radius: 100px;
 }
 
- 
+
 /* years inception */
 
 .dot-timeline {
@@ -544,4 +544,9 @@
     margin-top: 4px;
     transform: rotate(-45deg);
   }
+}
+
+
+.lifeSlider .swiper-wrapper {
+  transform: translate3d(0px, 0, 0) !important
 }
