--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -435,8 +435,7 @@
     margin: auto;
   }
 
-  .lifeSlide .swiper-slide,
-  .awardSlide .swiper-slide {
+  .lifeSlide .swiper-slide {
     height: auto !important;
 
   }
