--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,30 @@
 @import "tailwindcss";
 
+@theme {
+  
+  --font-amino: "Amino", sans-serif;
+
+  --color-base1: #17479e;
+  --color-base2: #ee3824;
+  --color-base3: #b7d0ff;
+  --color-base4: #114e87;
+
+  --breakpoint-5xs: 20rem; /* 320px */
+  --breakpoint-4xs: 24rem; /* 384px */
+  --breakpoint-3xs: 28rem; /* 448px */
+  --breakpoint-2xs: 32rem; /* 512px */
+  --breakpoint-xs: 36rem; /* 576px */
+  --breakpoint-sm: 40rem; /* 640px */
+  --breakpoint-md: 48rem; /* 768px */
+  --breakpoint-lg: 64rem; /* 1024px */
+  --breakpoint-xl: 80rem; /* 1280px */
+  --breakpoint-2xl: 96rem; /* 1536px */
+  --breakpoint-3xl: 120rem; /* 1920px */
+
+}
+
 @layer base {
   :root {
-    --font-amino: "Amino", sans-serif;
     --header-y: 80px;
     --marquee-y: 35px;
     --container-x: 100%;
@@ -12,36 +34,31 @@
   @media (min-width: 640px) {
     /* sm */
     :root {
-      /* Custom Container Sizes (Override Defaults) */
-      --container-x: 40rem;
+      --container-x: var(--breakpoint-sm);
     }
   }
 
   @media (min-width: 768px) {
     /* md */
     :root {
-      /* 480px, vs default 640px */
-      --container-x: 48rem;
+      --container-x: var(--breakpoint-md);
     }
   }
 
   @media (min-width: 1024px) {
     /* lg */
     :root {
-      /* 576px, vs default 768px */
-      --container-x: 64rem;
-      --container-padding: 1.5rem;
+      --container-x: var(--breakpoint-lg);
+      --container-padding: 5rem;
       --header-y: 60px;
       --marquee-y: 40px;
-      --container-padding: 5rem;
     }
   }
 
   @media (min-width: 1280px) {
     /* xl */
     :root {
-      /* 768px, vs default 1024px */
-      --container-x: 80rem;
+      --container-x: var(--breakpoint-xl);
       --container-padding: 6rem;
       --header-y: 70px;
       --marquee-y: 30px;
@@ -51,8 +68,7 @@
   @media (min-width: 1536px) {
     /* 2xl */
     :root {
-      /* 960px, vs default 1280px */
-      --container-x: 96rem;
+      --container-x: var(--breakpoint-2xl);
       --container-padding: 7rem;
       --header-y: 80px;
       --marquee-y: 40px;
@@ -62,67 +78,35 @@
   @media (min-width: 1920px) {
     /* 3xl */
     :root {
-      /* 960px, vs default 1280px */
-      --container-x: 120rem;
+      --container-x: var(--breakpoint-3xl);
       --container-padding: 8rem;
       --marquee-y: 50px;
       --header-y: 100px;
     }
   }
-
-  body {
-    font-family: var(--font-amino);
-  }
 }
 
-@theme {
-  /* Existing Colors */
-  --color-base1: #17479e;
-  --color-base2: #ee3824;
-  --color-base3: #b7d0ff;
-  --color-base4: #114e87;
-
-  --breakpoint-3xl: 120rem;
-
-  /* Existing Font Sizes */
-  --font-size-xxs: 0.625rem;
-  /* 10px */
-  --font-size-xs: 0.75rem;
-  /* 12px */
-  --font-size-sm: 0.875rem;
-  /* 14px */
-  --font-size-base: 1rem;
-  /* 16px */
-  --font-size-lg: 1.125rem;
-  /* 18px */
-  --font-size-xl: 1.25rem;
-  /* 20px */
-  --font-size-2xl: 1.5rem;
-  /* 24px */
-  --font-size-3xl: 1.875rem;
-  /* 30px */
-  --font-size-4xl: 2.25rem;
-  /* 36px */
-}
-
-/* Apply custom container sizes at standard breakpoints */
 @layer utilities {
   .container {
-    max-width: var(--container-x);
-    /* Default full-width below sm */
     margin-left: auto;
     margin-right: auto;
     padding-left: var(--container-padding, 1rem);
     padding-right: var(--container-padding, 1rem);
   }
 
-  .sp-container {
+  @media (max-width: 640px) {
+    .container {
+      max-width: 100%;
+    }
+  }
+
+  /* .sp-container {
     max-width: calc(100% - ((100% - var(--container-x)) / 2));
     margin-left: auto;
     margin-right: auto;
     padding-left: var(--container-padding, 1rem);
     padding-right: var(--container-padding, 1rem);
-  }
+  } */
 }
 
 @layer components {
@@ -209,41 +193,12 @@
     color: #000;
   }
 
-  .text-sm-1,
+  .text-sm1,
   p {
     font-size: 14px;
     line-height: 1.4;
     font-weight: 400;
     color: #000;
-  }
-
-  .text-header-sm {
-    font-size: 12px;
-    line-height: 1;
-    font-weight: 500;
-    color: #000;
-  }
-
-  .text-footer-1 {
-    font-size: 14px;
-    line-height: 1;
-    font-weight: 500;
-    color: #000;
-  }
-
-  .text-footer-2 {
-    font-size: 12px;
-    line-height: 1;
-    font-weight: 400;
-    color: rgba(0, 0, 0, 0.8);
-  }
-
-  .text-banner-1 {
-    font-size: 26px;
-    line-height: 1;
-    font-weight: 400;
-    color: #000;
-    text-transform: capitalize;
   }
 
   @media (min-width: 640px) {
@@ -255,10 +210,6 @@
     .text-title2 {
       font-size: 28px;
     }
-
-    .text-banner-1 {
-      font-size: 30px;
-    }
   }
 
   @media (min-width: 768px) {
@@ -268,10 +219,6 @@
     }
 
     .text-title2 {
-      font-size: 34px;
-    }
-
-    .text-banner-1 {
       font-size: 34px;
     }
   }
@@ -286,30 +233,8 @@
       font-size: 40px;
     }
 
-    .text-sm-1,
+    .text-sm1,
     p {
-      font-size: 12px;
-    }
-
-    .text-header-sm {
-      font-size: 10px;
-    }
-
-    .text-footer-1 {
-      font-size: 16px;
-    }
-
-    .text-footer-2 {
-      font-size: 12px;
-    }
-
-    .text-banner-1 {
-      font-size: 40px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .text-header-sm {
       font-size: 12px;
     }
   }
@@ -324,25 +249,9 @@
       font-size: 58px;
     }
 
-    .text-sm-1,
+    .text-sm1,
     p {
       font-size: 14px;
-    }
-
-    .text-header-sm {
-      font-size: 14px;
-    }
-
-    .text-footer-1 {
-      font-size: 18px;
-    }
-
-    .text-footer-2 {
-      font-size: 14px;
-    }
-
-    .text-banner-1 {
-      font-size: 48px;
     }
   }
 
@@ -356,25 +265,9 @@
       font-size: 68px;
     }
 
-    .text-sm-1,
+    .text-sm1,
     p {
       font-size: 18px;
-    }
-
-    .text-header-sm {
-      font-size: 16px;
-    }
-
-    .text-footer-1 {
-      font-size: 22px;
-    }
-
-    .text-footer-2 {
-      font-size: 16px;
-    }
-
-    .text-banner-1 {
-      font-size: 68px;
     }
   }
 
