--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
 @theme {
-  
   --font-amino: "Amino", sans-serif;
 
   --color-base1: #17479e;
@@ -20,7 +19,6 @@
   --breakpoint-xl: 80rem; /* 1280px */
   --breakpoint-2xl: 96rem; /* 1536px */
   --breakpoint-3xl: 120rem; /* 1920px */
-
 }
 
 @layer base {
@@ -215,7 +213,7 @@
   @media (min-width: 768px) {
     /* md */
     .text-title1 {
-      font-size: 24px;
+      font-size: 22px;
     }
 
     .text-title2 {
@@ -226,7 +224,7 @@
   @media (min-width: 1024px) {
     /* lg */
     .text-title1 {
-      font-size: 30px;
+      font-size: 24px;
     }
 
     .text-title2 {
@@ -236,6 +234,13 @@
     .text-sm1,
     p {
       font-size: 12px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    /* xl */
+    .text-title1 {
+      font-size: 30px;
     }
   }
 
@@ -272,7 +277,7 @@
   }
 
   /* BANNER_SLIDER */
-  .heroSlide,
+  /* .heroSlide,
   .aboutSlide {
     --swiper-pagination-bottom: 40px;
     --swiper-pagination-color: #fff;
@@ -331,7 +336,7 @@
     .swiper-pagination
     .swiper-pagination-bullet.swiper-pagination-bullet-active {
     outline: 1px solid #17479e;
-  }
+  } */
 
   .LoanSlider .swiper-wrapper {
     padding: 20px 0 !important;
