about page mobile layout

--- a/src/components/features/about/About.css
+++ b/src/components/features/about/About.css
@@ -1,11 +1,24 @@
 .aboutSlide {
   --swiper-pagination-bottom: 40px;
-  --swiper-pagination-color: #fff;
-  --swiper-pagination-bullet-width: 8px;
-  --swiper-pagination-bullet-height: 8px;
-  --swiper-pagination-bullet-inactive-color: #000;
+  --swiper-pagination-color: #ffc1c1;
+  --swiper-pagination-bullet-width: 6px;
+  --swiper-pagination-bullet-height: 6px;
+  --swiper-pagination-bullet-inactive-color: #fff;
   --swiper-pagination-bullet-inactive-opacity: 1;
-  --swiper-pagination-bullet-horizontal-gap: 10px;
+  --swiper-pagination-bullet-horizontal-gap: 5px;
+}
+@media (min-width: 640px) {
+  .aboutSlide {
+    --swiper-pagination-color: #fff;
+    --swiper-pagination-bullet-inactive-color: #000;
+  }
+}
+@media (min-width: 1536px) {
+  .aboutSlide {
+    --swiper-pagination-bullet-width: 8px;
+    --swiper-pagination-bullet-height: 8px;
+    --swiper-pagination-bullet-horizontal-gap: 10px;
+  }
 }
 
 .aboutSlide .swiper-pagination {
@@ -13,13 +26,25 @@
   max-width: var(--container-x);
   padding-left: var(--container-padding, 1rem);
   padding-right: var(--container-padding, 1rem);
-  left: 0;
+  left: -5px;
   right: 0;
   margin: auto;
+}
+@media (min-width: 1536px) {
+  .aboutSlide .swiper-pagination {
+    left: -10px;
+  }
 }
 
 .aboutSlide
   .swiper-pagination
   .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  outline: 3px solid #ee3824;
+  outline: 1px solid #ee3824;
+}
+@media (min-width: 640px) {
+  .aboutSlide
+    .swiper-pagination
+    .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    outline: 3px solid #ee3824;
+  }
 }
