--- a/src/components/features/history/history.module.css
+++ b/src/components/features/history/history.module.css
@@ -1,5 +1,6 @@
 /* history slider */
 .itemsList {
+  width: 100%;
   height: 100%;
   position: relative;
 }
@@ -63,7 +64,6 @@
 }
 
 @media only screen and (max-width: 1919px) {
-
   .itemsList .item:nth-child(2) {
     max-width: 150px;
     max-height: 300px;
@@ -105,7 +105,6 @@
 }
 
 @media only screen and (max-width: 1535px) {
-
   .itemsList .item:nth-child(2) {
     max-width: 130px;
     max-height: 330px;
@@ -147,7 +146,6 @@
 }
 
 @media only screen and (max-width: 1279px) {
-
   .itemsList .item:nth-child(2) {
     max-width: 120px;
     max-height: 320px;
@@ -188,8 +186,25 @@
   }
 }
 
-/* histrory  years inception*/
+@media only screen and (max-width: 1023px) {
+  .itemsList .item:nth-child(4) {
+    max-width: 130px;
+    max-height: 165px;
+    left: -8px;
+  }
+  .itemsList .item:nth-child(5) {
+    max-width: 245px;
+    max-height: 240px;
+    left: -8px;
+  }
+  .itemsList .item:nth-child(6) {
+    max-width: 110px;
+    max-height: 135px;
+    left: -8px;
+  }
+}
 
+/* histrory  years inception*/
 
 .dotTimeline {
   width: 4px;
@@ -199,13 +214,13 @@
   margin: 5px 0;
 }
 
-.movingArrowsIndicator  {
+.movingArrowsIndicator {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
   width: 40px;
   height: 40px;
-  background-color: #EB0208;
+  background-color: #eb0208;
   border-radius: 50%;
   transition: transform 0.8s ease-in-out;
   display: flex;
@@ -233,13 +248,13 @@
 }
 
 @media only screen and (min-width: 1535px) {
-  .dotTimeline{
+  .dotTimeline {
     margin: 14px 0;
     width: 6px;
     height: 6px;
   }
 
-  .movingArrowsIndicator  {
+  .movingArrowsIndicator {
     width: 56px;
     height: 56px;
   }
