--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,7 +211,7 @@
 
   .text-sm1,
   p {
-    font-size: 14px;
+    font-size: 13px;
     line-height: 1.4;
     font-weight: 400;
     color: #000;
@@ -259,6 +259,7 @@
   }
 
   @media (min-width: 1280px) {
+
     /* xl */
     .text-title1 {
       font-size: 30px;
@@ -481,5 +482,10 @@
 
   .lifeSlide .swiper-wrapper {
     transform: translate3d(0px, 0, 0) !important;
+  }
+
+  .bg-custom-svg {
+    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2384AFFFFF' stroke-width='2' stroke-dasharray='4%2c 4' stroke-dashoffset='8' stroke-linecap='square'/%3e%3c/svg%3e");
+    border-radius: 10px;
   }
 }
