font change to montserrat

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 
 @theme {
   --font-amino: "Amino", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
 
   --color-base1: #17479e;
   --color-base2: #ee3824;
